style.css
@font-face {
  font-family: digital7;
  src: url('./assets/digital-7.ttf')
}

body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: #dfe1fd;
  padding: 0;
  margin: 0;
}

button {
  display: block;
  height: 60px;
  width: 60px;
  border-radius: 50%;
  font-size: 24px;
  font-family: Calibri;
  border: transparent;
  color:black;
}

h1 {
  display: block;
  margin: 0;
}

.clicked {
  color: white;
  background-color: #A66CFF;
}

.content {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.calculator {
  border: solid;
  padding: 16px;
  border-radius: 16px;
  border-color: transparent;
  background-color: #9C9EFE;
}

.buttons {
  display: grid;
  grid-template-rows: repeat(5, 1fr);
  grid-gap: 8px;
  padding-top: 16px;
}

.button-row {
  display: flex;
  gap: 8px;
}

.display {
  height: 72px;
  display: flex;
  align-items: center;
  justify-content: right;
  border: transparent;
  background-color: #B1E1FF;
  border-radius: 12px;
  padding: 8px;
}

#number-display {
  font-family: digital7;
  color: rgb(49, 49, 49);
  font-size: 54px;
}

.operator-button {
  background-color: #242F9B;
  color: white;
}

.delete-button, .delete-button:disabled {
  font-size: 20px;
  background-color: #646FD4;
  color: white;
}

.clear-button, .evaluate-button {
  font-size: 20px;
  width: 128px;
  border-radius: 48px;
  background-color: #646FD4;
  color: white;
}

.evaluate-button {
  font-size: 24px;
}

.footer {
  text-align: center;
  background-color: #AFB4FF;
  font-family: Calibri;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

a {
  text-decoration: none;
  font-weight: bold;
  color: black;
}

